--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>WebStudio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/reset.css">
@@ -20,21 +19,21 @@
                 <a href="/" class="Web">Web<span class="header-logo">Studio</span></a>
             </li>
             <li>
-                <a href="./index.html" class="header-studio">Студія</a>
+                <a class="header-link" href="./index.html">Студія</a>
             </li>
             <li>
-                <a class="header-portfolio" href="./portfolio.html">Портфоліо</a>
+                <a class="header-link" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="header-page" >
-                <a class="header-contact" href="#">Контакти</a>
+                <a class="header-link" href="/">Контакти</a>
             </li>
         </ul>
         <ul class="header-list">
             <li class="header-item">
-                <a class="header-email" href="info@devstudio.com">info@devstudio.com</a>
+                <a class="header-contact" href="info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="header-item">
-                <a class="header-number" href="tel:380961111111">+38 096 111 11 11</a>
+                <a class="header-contact" href="tel:380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -108,11 +107,11 @@
         </section>
     </main>
     <footer class="footer">
-        <h2 class="footer-Web" href="/">Web<span class="footer-logo">Studio</span></h2>
+        <h2 class="footer-Web">Web<span class="footer-logo">Studio</span></h2>
         <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
             <ul class="footer-list">
                 <li>
-                <a class="footer-email" href="info@devstudio.com">info@devstudio.com</a>
+                <a class="footer-contact" href="info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li class="footer-item">
                 <a class="footer-contact" href="tel:380961111111">+38 096 111 11 11</a>
