--- a/index.html
+++ b/index.html
@@ -13,110 +13,113 @@
     <link rel="stylesheet" href="./css/reset.css">
 </head>
 <body>
-    <header class="header-section">
+  <header class="header">
+    <section class="header-section">
+      <div class="container">
         <ul class="header-pages">
-            <li class="header-list">
-                <a href="/" class="Web">Web<span class="header-logo">Studio</span></a>
-            </li>
-            <li>
-                <a class="header-link" href="./index.html">Студія</a>
-            </li>
-            <li>
-                <a class="header-link" href="./portfolio.html">Портфоліо</a>
-            </li>
-            <li class="header-page" >
-                <a class="header-link" href="/">Контакти</a>
-            </li>
+          <li class="header-list">
+            <a href="/" class="Web">Web<span class="header-logo">Studio</span></a>
+          </li>
+          <li class="header-list">
+            <a class="header-link" href="./index.html">Студія</a>
+          </li>
+          <li class="header-list">
+            <a class="header-link" href="./portfolio.html">Портфоліо</a>
+          </li>
+          <li class="header-list" >
+            <a class="header-link" href="/">Контакти</a>
+          </li>
         </ul>
-        <ul class="header-list">
-            <li class="header-item">
-                <a class="header-contact" href="info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="header-item">
-                <a class="header-contact" href="tel:380961111111">+38 096 111 11 11</a>
-            </li>
+        <ul class="header-contact">
+          <li class="header-item">
+            <a class="header-contact" href="info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="header-item">
+            <a class="header-contact" href="tel:380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
-    </header>
-    <main class="main-section">
-        <!-- Секція герой -->
-        <section class="hero-section">
-            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button class="hero-button" type="button"><span class="hero-span">Замовити послугу</span></button>
-        </section>
-        <!-- Якости -->
-        <section class="qualities-section">
-            <ul class="qualities-list">
-                <li class="qualities-item">
-                    <h3 class="qualities-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p class="qualities-text">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus impedit quasi ducimus nihil dicta praesentium rem? Aspernatur saepe autem aut repudiandae voluptates, est placeat nihil debitis magni ducimus, omnis reprehenderit!
-                    </p>
-                </li>
-                <li class="qualities-item">
-                    <h3 class="qualities-title">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p class="qualities-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ullam dicta repellat rem possimus explicabo assumenda provident eaque libero! Voluptatibus quod sed consequatur porro qui quaerat asperiores nam nisi sequi?
-                    </p>
-                </li>
-                <li class="qualities">
-                    <h3 class="qualities-title">ПЛАНУВАННЯ</h3>
-                    <p class="qualities-text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid blanditiis voluptatibus eaque repudiandae excepturi aut magnam porro tenetur, perferendis veniam nobis nihil iusto fuga saepe ducimus mollitia iste quae nam.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="qualities-title">СУЧАСНІ ТЕЧНОЛОГІЇ</h3>
-                    <p class="qualities-text">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus saepe beatae odit quam deleniti exercitationem ipsam eum facilis tenetur dolores, laborum eligendi, natus commodi! Commodi, repellat adipisci? Eveniet, reprehenderit dignissimos.
-                    </p>
-                </li>
-            </ul>
-        </section>
-        <section class="work-section">
-            <h2 class="work-title">Чим ми займаємося</h2>
-            <ul class="work-list">
-                <li class="work-item"><img class="work-img" src="img/img-2/./img-5.png" width="200" height="150" alt="html"></li>
-                <li class="work-item"><img class="work-img" src="img/img-2/./img-6.png" width="200" height="150" alt="css"></li>
-                <li class="work-item"><img class="work-img" src="img/img-2/img-7.png" width="200" height="150" alt="javaScript"></li>
-            </ul>
-        </section>
-        <section class="team">
-            <h2 class="team-title">Наша комманда</h2>
-            <ul class="team-list">
-                <li class="team-item">
-                    <img class="team-img" src="img/img-2/img-1.jpg" width="200" height="200" alt="product designer">
-                    <p class="team-text">Ігор Дем’яненко</p>
-                    <p class="team-position">Product Designer</p>
-                </li>
-                <li class="team-item">
-                    <img class="team-img" src="img/img-2/img-2.jpg" width="200" height="200" alt="frontend developer">
-                    <p class="team-text">Ольга Репіна</p>
-                    <p class="team-position">Frontend Developer</p>
-                </li>
-                <li class="team-item">
-                    <img class="team-img" src="img/img-2/img-3.jpg" width="200" height="200" alt="marketing">
-                    <p class="team-text">Микола Тарасов</p>
-                    <p class="team-position">Marketing</p>
-                </li>
-                <li class="team-item">
-                    <img class="team-img" src="img/img-2/img-4.jpg" width="200" height="200" alt="ui designer">
-                    <p class="team-text">Михайло Єрмаков</p>
-                    <p class="team-position">UI Designer</p>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer class="footer">
+      </div>
+    </section>
+  </header>
+  <main class="main-section">
+    <section class="hero-section">
+      <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="hero-button" type="button"><span class="hero-span">Замовити послугу</span></button>
+      </div>
+    </section>
+    <section class="qualities-section">
+      <div class="container">
+        <ul class="qualities-list">
+          <li class="qualities-item">
+            <h3 class="qualities-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="qualities-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus impedit quasi ducimus nihil dicta praesentium rem? Aspernatur saepe autem aut repudiandae voluptates, est placeat nihil debitis magni ducimus, omnis reprehenderit!</p>
+          </li>
+          <li class="qualities-item">
+            <h3 class="qualities-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="qualities-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ullam dicta repellat rem possimus explicabo assumenda provident eaque libero! Voluptatibus quod sed consequatur porro qui quaerat asperiores nam nisi sequi?</p>
+          </li>
+          <li class="qualities-item">
+            <h3 class="qualities-title">ПЛАНУВАННЯ</h3>
+            <p class="qualities-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid blanditiis voluptatibus eaque repudiandae excepturi aut magnam porro tenetur, perferendis veniam nobis nihil iusto fuga saepe ducimus mollitia iste quae nam.</p>
+          </li>
+          <li class="qualities-item">
+            <h3 class="qualities-title">СУЧАСНІ ТЕЧНОЛОГІЇ</h3>
+            <p class="qualities-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus saepe beatae odit quam deleniti exercitationem ipsam eum facilis tenetur dolores, laborum eligendi, natus commodi! Commodi, repellat adipisci? Eveniet, reprehenderit dignissimos.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="work-section">
+      <div class="container">
+        <h2 class="work-title">Чим ми займаємося</h2>
+        <ul class="work-list">
+          <li class="work-item"><img class="work-img" src="img/img-2/./img-5.png" width="200" height="150" alt="html"></li>
+          <li class="work-item"><img class="work-img" src="img/img-2/./img-6.png" width="200" height="150" alt="css"></li>
+          <li class="work-item"><img class="work-img" src="img/img-2/img-7.png" width="200" height="150" alt="javaScript"></li>
+        </ul>
+      </div>
+    </section>
+    <section class="team">
+      <div class="container">            <h2 class="team-title">Наша комманда</h2>
+        <ul class="team-list">
+          <li class="team-item">
+            <img class="team-img" src="img/img-2/img-1.jpg" width="200" height="200" alt="product designer">
+            <p class="team-person">Ігор Дем’яненко</p>
+            <p class="team-text">Product Designer</p>
+          </li>
+          <li class="team-item">
+            <img class="team-img" src="img/img-2/img-2.jpg" width="200" height="200" alt="frontend developer">
+            <p class="team-person">Ольга Репіна</p>
+            <p class="team-text">Frontend Developer</p>
+          </li>
+          <li class="team-item">
+            <img class="team-img" src="img/img-2/img-3.jpg" width="200" height="200" alt="marketing">
+            <p class="team-person">Микола Тарасов</p>
+            <p class="team-text">Marketing</p>
+          </li>
+          <li class="team-item">
+            <img class="team-img" src="img/img-2/img-4.jpg" width="200" height="200" alt="ui designer">
+            <p class="team-person">Михайло Єрмаков</p>
+            <p class="team-text">UI Designer</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="container">
         <h2 class="footer-Web">Web<span class="footer-logo">Studio</span></h2>
         <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
-            <ul class="footer-list">
-                <li>
-                <a class="footer-contact" href="info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="footer-item">
-                <a class="footer-contact" href="tel:380961111111">+38 096 111 11 11</a>
-                </li>
-            </ul>
-    </footer>
+      <ul class="footer-list">
+        <li class="footer-item">
+          <a class="footer-contact" href="info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="footer-item">
+          <a class="footer-contact" href="tel:380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
