--- a/portfolio.html
+++ b/portfolio.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>WebStudio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" href="./css/portfolio.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="./css/reset.css">
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/portfolio.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/reset.css" />
+  </head>
+  <body>
     <header class="header">
       <section class="header-section">
         <div class="container">
           <ul class="header-list">
             <li class="header-item">
-              <a class="Web" href="./index.html">Web<span class="header-logo">Studio</span></a>
+              <a class="Web" href="./index.html"
+                >Web<span class="header-logo">Studio</span></a
+              >
             </li>
             <li class="header-item">
               <a class="header-link" href="./index.html">Студія</a>
@@ -31,102 +38,144 @@
           </ul>
           <ul class="header-list">
             <li class="header-item">
-              <a class="header-contact" href="mailto:info@example.com">info@devstudio.com</a>
+              <a class="header-contact" href="mailto:info@example.com"
+                >info@devstudio.com</a
+              >
             </li>
             <li class="header-item">
-              <a class="header-contact" href="tel:380961111111">+38 096 111 11 11</a>
+              <a class="header-contact" href="tel:380961111111"
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
         </div>
       </section>
     </header>
-  <main class="main-section">
-    <section class="buttons-section">
-      <div class="container">
-        <ul class="buttons-list">
-          <li class="buttons-item">
-            <button type="button" class="buttons-items">Усе</button>
-          </li>
-          <li class="buttons-item">
-            <button type="button" class="buttons-items">Веб-сайти</button>
-          </li>
-          <li class="buttons-item">
-            <button type="button" class="buttons-items">Застосунки</button>
-          </li>
-          <li class="buttons-item">
-            <button type="button" class="buttons-items">Дизайн</button>
-          </li>
-          <li class="buttons-item">
-            <button type="button" class="buttons-items">Маркетинг</button>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="card-section">
-      <div class="container">
-        <ul class="poster-list">
-          <li class="poster-item">
-            <img class="poster-img" src="./img/img-3/img.png" alt="Вебсайт">
-            <p class="poster-text">Технокряк</p>
-            <p class="poster-description">Вебсайт</p>
-          </li>
-          <li class="poster-item">
-            <img class="poster-img" src="./img/img-3/img-(1).png" alt="Дизайн">
-            <p class="poster-text">Постер New Orlean vs Golden Star</p>
-            <p class="poster-description">Дизайн</p>
-          </li>
-          <li class="poster-item">
-            <img class="poster-img" src="./img/img-3/img-(2).png" alt="Застосунок">
-            <p class="poster-text">Ресторан Seafood</p>
-            <p class="poster-description">Застосунок</p>
-          </li>
-          <li class="poster-item">
-            <img class="poster-img" src="./img/img-3/img-(3).png" alt="Маркетинг">
-            <p class="poster-text">Проект Prime</p>
-            <p class="poster-description">Маркетинг</p>
-          </li>
-          <li class="poster-item">
-            <img class="poster-img" src="./img/img-3/img-(4).png" alt="Застосунок">
-            <p class="poster-text">Проект Boxes</p>
-            <p class="poster-description">Застосунок</p>
-          </li>
-          <li class="poster-item">
-            <img class="poster-img" src="./img/img-3/img-(5).png" alt="Веб-сайт">
-            <p class="poster-text">Inspiration has no Borders</p>
-            <p class="poster-description">Веб-сайт</p>
-          </li>
-          <li class="poster-item">
-            <img class="poster-img" src="./img/img-3/img-(6).png" alt="Дизайн">
-            <p class="poster-text">Видавництво Limited Edition</p>
-            <p class="poster-description">Дизайн</p>
-          </li>
-          <li class="poster-item">
-            <img class="poster-img" src="./img/img-3/img-(7).png" alt="Маркетинг">
-            <p class="poster-text">Проект LAB</p>
-            <p class="poster-description">Маркетинг</p>
-          </li>
-          <li class="poster-item">
-            <img class="poster-img" src="./img/img-3/img-(8).png" alt="Застосунок">
-            <p class="poster-text">Growing Business</p>
-            <p class="poster-description">Застосунок</p>
-          </li>
-        </ul>
-      </div>
-    </section> 
-  </main>
-  <footer class="footer">
-    <div class="container">
-        <h2 class="footer-Web">Web<span class="footer-logo">Studio</span></h2>
-        <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
-          <ul class="footer-list">
-              <li class="footer-item">
-                <a class="footer-contact" href="mailto:info@example.com">info@example.com</a>
-              </li>
-              <li class="footer-item">
-               <a class="footer-contact" href="tel:380961111111">+38 096 111 11 11</a>
-              </li>
+    <main class="main-section">
+      <section class="buttons-section">
+        <div class="container">
+          <ul class="buttons-list">
+            <li class="buttons-item">
+              <button type="button" class="buttons-items">Усе</button>
+            </li>
+            <li class="buttons-item">
+              <button type="button" class="buttons-items">Веб-сайти</button>
+            </li>
+            <li class="buttons-item">
+              <button type="button" class="buttons-items">Застосунки</button>
+            </li>
+            <li class="buttons-item">
+              <button type="button" class="buttons-items">Дизайн</button>
+            </li>
+            <li class="buttons-item">
+              <button type="button" class="buttons-items">Маркетинг</button>
+            </li>
           </ul>
+        </div>
+      </section>
+      <section class="card-section">
+        <div class="container">
+          <ul class="poster-list">
+            <li class="poster-item">
+              <img class="poster-img" src="./img/img-3/img.png" alt="Вебсайт" />
+              <p class="poster-text">Технокряк</p>
+              <p class="poster-description">Вебсайт</p>
+            </li>
+            <li class="poster-item">
+              <img
+                class="poster-img"
+                src="./img/img-3/img-(1).png"
+                alt="Дизайн"
+              />
+              <p class="poster-text">Постер New Orlean vs Golden Star</p>
+              <p class="poster-description">Дизайн</p>
+            </li>
+            <li class="poster-item">
+              <img
+                class="poster-img"
+                src="./img/img-3/img-(2).png"
+                alt="Застосунок"
+              />
+              <p class="poster-text">Ресторан Seafood</p>
+              <p class="poster-description">Застосунок</p>
+            </li>
+            <li class="poster-item">
+              <img
+                class="poster-img"
+                src="./img/img-3/img-(3).png"
+                alt="Маркетинг"
+              />
+              <p class="poster-text">Проект Prime</p>
+              <p class="poster-description">Маркетинг</p>
+            </li>
+            <li class="poster-item">
+              <img
+                class="poster-img"
+                src="./img/img-3/img-(4).png"
+                alt="Застосунок"
+              />
+              <p class="poster-text">Проект Boxes</p>
+              <p class="poster-description">Застосунок</p>
+            </li>
+            <li class="poster-item">
+              <img
+                class="poster-img"
+                src="./img/img-3/img-(5).png"
+                alt="Веб-сайт"
+              />
+              <p class="poster-text">Inspiration has no Borders</p>
+              <p class="poster-description">Веб-сайт</p>
+            </li>
+            <li class="poster-item">
+              <img
+                class="poster-img"
+                src="./img/img-3/img-(6).png"
+                alt="Дизайн"
+              />
+              <p class="poster-text">Видавництво Limited Edition</p>
+              <p class="poster-description">Дизайн</p>
+            </li>
+            <li class="poster-item">
+              <img
+                class="poster-img"
+                src="./img/img-3/img-(7).png"
+                alt="Маркетинг"
+              />
+              <p class="poster-text">Проект LAB</p>
+              <p class="poster-description">Маркетинг</p>
+            </li>
+            <li class="poster-item">
+              <img
+                class="poster-img"
+                src="./img/img-3/img-(8).png"
+                alt="Застосунок"
+              />
+              <p class="poster-text">Growing Business</p>
+              <p class="poster-description">Застосунок</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <h2 class="footer-Web">Web<span class="footer-logo">Studio</span></h2>
+        <address class="footer-address">
+          м. Київ, пр-т Лесі Українки, 26
+        </address>
+        <ul class="footer-list">
+          <li class="footer-item">
+            <a class="footer-contact" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li class="footer-item">
+            <a class="footer-contact" href="tel:380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
