--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <div class="container">
           <a href="/" class="Web">Web<span class="header-logo">Studio</span></a>
           <ul class="header-pages">
-            <li class="header-list">
+            <li class="header-item">
               <a class="header-link" href="./index.html">Студія</a>
             </li>
-            <li class="header-list">
+            <li class="header-item">
               <a class="header-link" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li class="header-list">
+            <li class="header-item">
               <a class="header-link" href="/">Контакти</a>
             </li>
           </ul>
