--- a/portfolio.html
+++ b/portfolio.html
@@ -20,12 +20,8 @@
     <header class="header">
       <section class="header-section">
         <div class="container">
-          <ul class="header-list">
-            <li class="header-item">
-              <a class="Web" href="./index.html"
-                >Web<span class="header-logo">Studio</span></a
-              >
-            </li>
+          <a href="/" class="Web">Web<span class="header-logo">Studio</span></a>
+          <ul class="header-pages">
             <li class="header-item">
               <a class="header-link" href="./index.html">Студія</a>
             </li>
@@ -36,9 +32,9 @@
               <a class="header-link" href="/">Контакти</a>
             </li>
           </ul>
-          <ul class="header-list">
+          <ul class="header-contacts">
             <li class="header-item">
-              <a class="header-contact" href="mailto:info@example.com"
+              <a class="header-contact" href="info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
@@ -51,6 +47,7 @@
         </div>
       </section>
     </header>
+
     <main class="main-section">
       <section class="buttons-section">
         <div class="container">
@@ -73,7 +70,7 @@
           </ul>
         </div>
       </section>
-      <section class="card-section">
+      <section class="poster-section">
         <div class="container">
           <ul class="poster-list">
             <li class="poster-item">
@@ -158,24 +155,20 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <h2 class="footer-Web">Web<span class="footer-logo">Studio</span></h2>
-        <address class="footer-address">
-          м. Київ, пр-т Лесі Українки, 26
-        </address>
-        <ul class="footer-list">
-          <li class="footer-item">
-            <a class="footer-contact" href="mailto:info@example.com"
-              >info@example.com</a
-            >
-          </li>
-          <li class="footer-item">
-            <a class="footer-contact" href="tel:380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </div>
+      <section class="footer-section">
+        <div class="container">
+          <h2 class="footer-Web">Web<span class="footer-logo">Studio</span></h2>
+          <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
+          <ul class="footer-list">
+            <li class="footer-item">
+              <a class="footer-contact" href="info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-contact" href="tel:380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
