--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/style.css"/>
-    <link rel="stylesheet" href="./css/reset.css"/>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
   </head>
   <body>
     <header class="header">
@@ -106,7 +106,8 @@
                 src="img/img-2/./img-5.png"
                 width="200"
                 height="150"
-                alt="html"/>
+                alt="html"
+              />
             </li>
             <li class="work-item">
               <img
@@ -114,7 +115,8 @@
                 src="img/img-2/./img-6.png"
                 width="200"
                 height="150"
-                alt="css"/>
+                alt="css"
+              />
             </li>
             <li class="work-item">
               <img
@@ -122,7 +124,8 @@
                 src="img/img-2/img-7.png"
                 width="200"
                 height="150"
-                alt="javaScript"/>
+                alt="javaScript"
+              />
             </li>
           </ul>
         </div>
@@ -137,7 +140,8 @@
                 src="img/img-2/img-1.jpg"
                 width="200"
                 height="200"
-                alt="product designer"/>
+                alt="product designer"
+              />
               <p class="team-person">Ігор Дем’яненко</p>
               <p class="team-text">Product Designer</p>
             </li>
@@ -147,7 +151,8 @@
                 src="img/img-2/img-2.jpg"
                 width="200"
                 height="200"
-                alt="frontend developer"/>
+                alt="frontend developer"
+              />
               <p class="team-person">Ольга Репіна</p>
               <p class="team-text">Frontend Developer</p>
             </li>
@@ -157,7 +162,8 @@
                 src="img/img-2/img-3.jpg"
                 width="200"
                 height="200"
-                alt="marketing"/>
+                alt="marketing"
+              />
               <p class="team-person">Микола Тарасов</p>
               <p class="team-text">Marketing</p>
             </li>
@@ -167,7 +173,8 @@
                 src="img/img-2/img-4.jpg"
                 width="200"
                 height="200"
-                alt="ui designer"/>
+                alt="ui designer"
+              />
               <p class="team-person">Михайло Єрмаков</p>
               <p class="team-text">UI Designer</p>
             </li>
@@ -179,13 +186,19 @@
       <section class="footer-section">
         <div class="container">
           <h2 class="footer-Web">Web<span class="footer-logo">Studio</span></h2>
-          <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
+          <address class="footer-address">
+            м. Київ, пр-т Лесі Українки, 26
+          </address>
           <ul class="footer-list">
             <li class="footer-item">
-              <a class="footer-contact" href="info@devstudio.com">info@devstudio.com</a>
+              <a class="footer-contact" href="info@devstudio.com"
+                >info@devstudio.com</a
+              >
             </li>
             <li class="footer-item">
-              <a class="footer-contact" href="tel:380961111111">+38 096 111 11 11</a>
+              <a class="footer-contact" href="tel:380961111111"
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
         </div>
