--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <li class="work-item">
               <img
                 class="work-img"
-                src="img/img-2/./img-5.png"
+                src="./img/img-2/img-5.jpg"
                 width="200"
                 height="150"
                 alt="html"
@@ -112,7 +112,7 @@
             <li class="work-item">
               <img
                 class="work-img"
-                src="img/img-2/./img-6.png"
+                src="./img/img-2/./img-6.jpg"
                 width="200"
                 height="150"
                 alt="css"
@@ -121,7 +121,7 @@
             <li class="work-item">
               <img
                 class="work-img"
-                src="img/img-2/img-7.png"
+                src="./img/img-2/img-7.jpg"
                 width="200"
                 height="150"
                 alt="javaScript"
@@ -179,6 +179,55 @@
               <p class="team-text">UI Designer</p>
             </li>
           </ul>
+        </div>
+      </section>
+      <!-- -client -->
+      <section class="section-client">
+        <div class="container">
+          <ul class="client-list">
+            <li class="client-item">
+              <a href="/" class="client-link">
+                <svg class="client-icon">
+                  <use href="./img/symbol-defs.svg#icon-client-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="/" class="client-link">
+                <svg class="client-icon">
+                  <use href="./img/symbol-defs.svg#icon-client-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="/" class="client-link">
+                <svg class="client-icon">
+                  <use href="./img/symbol-defs.svg#icon-client-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="/" class="client-link">
+                <svg class="client-icon">
+                  <use href="./img/symbol-defs.svg#icon-client-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="/" class="client-link">
+                <svg class="client-icon">
+                  <use href="./img/symbol-defs.svg#icon-client-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="/" class="client-link">
+                <svg class="client-icon">
+                  <use href="./img/symbol-defs.svg#icon-client-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul> 
         </div>
       </section>
     </main>
