--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,8 @@
     <title>WebStudio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"/>
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/portfolio.css" />
     <link
       rel="stylesheet"
@@ -73,14 +74,14 @@
         <div class="container">
           <ul class="poster-list">
             <li class="poster-item">
-              <img class="poster-img" src="./img/img-3/img.png" alt="Вебсайт" />
+              <img class="poster-img" src="./img/img-3/img.jpg" alt="Вебсайт" />
               <p class="poster-text">Технокряк</p>
               <p class="poster-description">Вебсайт</p>
             </li>
             <li class="poster-item">
               <img
                 class="poster-img"
-                src="./img/img-3/img-(1).png"
+                src="./img/img-3/img-1.jpg"
                 alt="Дизайн"
               />
               <p class="poster-text">Постер New Orlean vs Golden Star</p>
@@ -89,7 +90,7 @@
             <li class="poster-item">
               <img
                 class="poster-img"
-                src="./img/img-3/img-(2).png"
+                src="./img/img-3/img-2.jpg"
                 alt="Застосунок"
               />
               <p class="poster-text">Ресторан Seafood</p>
@@ -98,7 +99,7 @@
             <li class="poster-item">
               <img
                 class="poster-img"
-                src="./img/img-3/img-(3).png"
+                src="./img/img-3/img-3.jpg"
                 alt="Маркетинг"
               />
               <p class="poster-text">Проект Prime</p>
@@ -107,7 +108,7 @@
             <li class="poster-item">
               <img
                 class="poster-img"
-                src="./img/img-3/img-(4).png"
+                src="./img/img-3/img-4.jpg"
                 alt="Застосунок"
               />
               <p class="poster-text">Проект Boxes</p>
@@ -116,7 +117,7 @@
             <li class="poster-item">
               <img
                 class="poster-img"
-                src="./img/img-3/img-(5).png"
+                src="./img/img-3/img-5.jpg"
                 alt="Веб-сайт"
               />
               <p class="poster-text">Inspiration has no Borders</p>
@@ -125,7 +126,7 @@
             <li class="poster-item">
               <img
                 class="poster-img"
-                src="./img/img-3/img-(6).png"
+                src="./img/img-3/img-6.jpg"
                 alt="Дизайн"
               />
               <p class="poster-text">Видавництво Limited Edition</p>
@@ -134,7 +135,7 @@
             <li class="poster-item">
               <img
                 class="poster-img"
-                src="./img/img-3/img-(7).png"
+                src="./img/img-3/img-7.jpg"
                 alt="Маркетинг"
               />
               <p class="poster-text">Проект LAB</p>
@@ -143,9 +144,9 @@
             <li class="poster-item">
               <img
                 class="poster-img"
-                src="./img/img-3/img-(8).png"
+                src="./img/img-3/img-8.jpg"
                 alt="Застосунок"
-              />
+                />
               <p class="poster-text">Growing Business</p>
               <p class="poster-description">Застосунок</p>
             </li>
@@ -157,13 +158,19 @@
       <section class="footer-section">
         <div class="container">
           <h2 class="footer-Web">Web<span class="footer-logo">Studio</span></h2>
-          <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
+          <address class="footer-address">
+            м. Київ, пр-т Лесі Українки, 26
+          </address>
           <ul class="footer-list">
             <li class="footer-item">
-              <a class="footer-contact" href="info@devstudio.com">info@devstudio.com</a>
+              <a class="footer-contact" href="info@devstudio.com"
+                >info@devstudio.com</a
+              >
             </li>
             <li class="footer-item">
-              <a class="footer-contact" href="tel:380961111111">+38 096 111 11 11</a>
+              <a class="footer-contact" href="tel:380961111111"
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
         </div>
